      an \R object of class \code{expression} (or other \sQuote{language})
      to work more consistently, thanks to suggestions by Suharto Anggono.

      \item \code{format.default(*, scientific = FALSE)} now corresponds to
      a practically most extreme \code{options(scipen = n)} setting rather
      than arbitrary \code{n = 100}.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.1 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{runmed(x, *)} gets new option \code{na.action}
      determining \emph{how} to handle \code{NaN} or \code{NA} in \code{x}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item Detection of the C stack direction has been moved from
      run-time to \command{configure}: this is safer with LTO builds and
      allows the detection to be overridden -- see file
      \file{config.site}.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item \code{installTrChar} (which is nowadays is wrapped by
      \code{installChar}) is defined in \file{Rinternals.h}.  (Neither
      are part of the API.)
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Header \file{Rconfig.h} contains the value of
	\code{FC_LEN_T} deduced at installation which is used by the
	prototypes in headers \file{BLAS.h} and \file{Lapack.h} but to
	avoid extensive breakage this is only exposed when
	\code{USE_FC_LEN_T} is defined.

	If a package's C/C++ calls to BLAS/LAPACK allow for the
	\sQuote{hidden} arguments used by most Fortran compilers to pass
	the lengths of Fortran character arguments, define
	\code{USE_FC_LEN_T} and include \file{Rconfig.h} (possibly
	\emph{via} \file{R.h}) before including \file{BLAS.h} or
	\file{Lapack.h}.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item Support for specifying C++98 in package installation is
      deprecated.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{